templates/openshift-4-lambda.template
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS Red Hat Openshift deployment'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Security configuration
        Parameters:
          - RemoteAccessCIDR
      - Label:
          default: Network configuration
        Parameters:
          - VpcId
          - SubnetId
          - VPCCIDR
          - HostedZoneName
      - Label:
          default: Cluster information
        Parameters:
            - OpenShiftVersion
            - MasterStack
            - IgnitionLocation
            - RhcosAmi
      - Label:
          default: AWS Quick Start Configuration
        Parameters:
          - QSS3BucketName
          - QSS3KeyPrefix
    ParameterLabels:
      VpcId:
        default: VPC ID
      SubnetId:
        default: "Subnet"
      VPCCIDR:
        default: VPC CIDR
      RemoteAccessCIDR:
        default: Remote access CIDR
      OpenShiftVersion:
        default: OpenShift version
      MasterStack:
        default: Master CloudFormation StackName
      RhcosAmi:
        default: "Red Hat Enterprise Linux CoreOS AMI ID"
      IgnitionLocation:
        default: "S3 base folder for Ignition Source"
      HostedZoneName:
        default: "Public Hosted Zone Name"
      QSS3BucketName:
        default: Quick Start S3 bucket name
      QSS3KeyPrefix:
        default: Quick Start S3 key prefix
Parameters:
  VpcId:
    Description: The VPC-scoped resources will belong to this VPC.
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Description: The subnet.
    Type: AWS::EC2::Subnet::Id
  VPCCIDR:
    Description: The CIDR block for the VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/24
    Type: String
  RemoteAccessCIDR:
    Description: The remote CIDR range for allowing SSH
      We recommend that you set this value to a trusted IP range.
      For example, you might want to grant specific ranges inside your corporate network SSH access.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
  OpenShiftVersion:
    Description: The version of OpenShift to deploy for the lab.
    AllowedValues:
      - "4.2"
      - "4.3"
    Default: "4.3"
    Type: String
  MasterStack:
    Description: The Master Stack of which is calling this student Cloud Formation stack
      for identification.
    Default: Master
    Type: String
  RhcosAmi:
      Description: Current Red Hat Enterprise Linux CoreOS AMI to use for bootstrap.
      Type: AWS::EC2::Image::Id
  HostedZoneName:
      Description: The Route53 zone to register the targets with, such as example.com. Omit the trailing period.
      Default: "example.com"
      Type: String
  IgnitionLocation:
    Default: s3://my-s3-bucket/myfolder
    Description: Ignition S3 bucket and or folder location in which bootstrap.ign will be added to. Do not add a trailing /
    Type: String
  QSS3BucketName:
    Description: S3 bucket name for the Quick Start assets. This string can include
      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
      or end with a hyphen (-).
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Type: String
  QSS3KeyPrefix:
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: aws-ocp/
    Type: String

Resources:
  NetworkStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4-network.template.yaml'
      Parameters:
        ClusterName: !Sub ${AWS::StackName}
        InfrastructureName: !Sub ${AWS::StackName}
        VpcId: !Ref VpcId
        SubnetId: !Ref SubnetId
        HostedZoneName: !Ref HostedZoneName

  MasterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster Security Group
      SecurityGroupIngress:
      - IpProtocol: icmp
        FromPort: 0
        ToPort: 0
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 6443
        FromPort: 6443
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        FromPort: 22623
        ToPort: 22623
        CidrIp: !Ref VPCCIDR
      - IpProtocol: icmp
        FromPort: 0
        ToPort: 0
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 6443
        FromPort: 6443
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        FromPort: 22623
        ToPort: 22623
        CidrIp: !Ref RemoteAccessCIDR
      VpcId: !Ref VpcId

  MasterIngressEtcd:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: etcd
      FromPort: 2379
      ToPort: 2380
      IpProtocol: tcp

  MasterIngressVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 4789
      ToPort: 4789
      IpProtocol: udp

  MasterIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp

  MasterIngressKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Kubernetes kubelet, scheduler and controller manager
      FromPort: 10250
      ToPort: 10259
      IpProtocol: tcp

  MasterIngressIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp

  BootStrapStack:
    DependsOn: NetworkStack
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4-instance.template.yaml'
      Parameters:
        InstanceName: !Sub ${AWS::StackName}-BOOT
        InfrastructureName: !Sub ${AWS::StackName}
        InstanceType: "i3.large"
        SubnetId: !Ref SubnetId
        RhcosAmi: !Ref RhcosAmi
        BootstrapIgnitionLocation: !Sub ${IgnitionLocation}/${AWS::StackName}/bootstrap.ign
        MasterSecurityGroupId: !Ref MasterSecurityGroup
        RegisterNlbIpTargetsLambdaArn: !GetAtt 'NetworkStack.Outputs.RegisterNlbIpTargetsLambda'
        ApiTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ServiceTargetGroupArn'
        ServiceTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ApiTargetGroupArn'
        WebTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebTargetGroupArn'
        WebSSLTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebSSLTargetGroupArn'
        SSHTargetGroupArn: !GetAtt 'NetworkStack.Outputs.SSHTargetGroupArn'
        HostedZoneName: !Ref HostedZoneName
        ControlPlane: "no"

  ControlPlaneStack:
    DependsOn: BootStrapStack
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4-instance.template.yaml'
      Parameters:
        InstanceName: !Sub ${AWS::StackName}-AIO
        InfrastructureName: !Sub ${AWS::StackName}
        InstanceType: "m4.xlarge"
        RhcosAmi: !Ref RhcosAmi
        SubnetId: !Ref SubnetId
        MasterSecurityGroupId: !Ref MasterSecurityGroup
        RegisterNlbIpTargetsLambdaArn: !GetAtt 'NetworkStack.Outputs.RegisterNlbIpTargetsLambda'
        ApiTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ServiceTargetGroupArn'
        ServiceTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ApiTargetGroupArn'
        WebTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebTargetGroupArn'
        WebSSLTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebSSLTargetGroupArn'
        SSHTargetGroupArn: !GetAtt 'NetworkStack.Outputs.SSHTargetGroupArn'
        BootstrapIgnitionLocation: !Sub ${IgnitionLocation}/${AWS::StackName}/master.ign
        HostedZoneName: !Ref HostedZoneName
        ControlPlane: "yes"

Outputs:
  OpenShiftVersion:
    Value: !Ref OpenShiftVersion
